--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "bezhansalleh/filament-shield": "^1.1",
         "doctrine/dbal": "^3.3",
         "fabpot/goutte": "^4.0",
         "filament/filament": "^2.10",
