--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "fabpot/goutte": "^4.0",
         "filament/filament": "^2.10",
         "filament/spatie-laravel-media-library-plugin": "^2.10",
+        "filament/spatie-laravel-settings-plugin": "^2.10",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.2",
         "laravel/helpers": "^1.5",
@@ -19,7 +20,8 @@
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^3.4",
-        "livewire/livewire": "^2.5"
+        "livewire/livewire": "^2.5",
+        "pxlrbt/filament-spotlight": "^0.3.2"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
