--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "filament/filament": "^2.10",
         "filament/spatie-laravel-media-library-plugin": "^2.10",
         "filament/spatie-laravel-settings-plugin": "^2.10",
+        "flowframe/laravel-trend": "^0.1.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.2",
         "laravel/helpers": "^1.5",
