--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^3.4",
-        "livewire/livewire": "^2.5"
+        "livewire/livewire": "^2.5",
+        "spatie/laravel-medialibrary": "^10.3"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.12",
