--- a/.env
+++ b/.env
@@ -11,11 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-<<<<<<< HEAD
-DB_DATABASE
-=======
-DB_DATABASE=fys
->>>>>>> 8f4612cad1a0736edc8e56c3dd2c7f14193722ba
+DB_DATABASE=fys1
 DB_USERNAME=root
 DB_PASSWORD=
 
