--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=FindYardSport
 APP_ENV=local
 APP_KEY=base64:mgCa9bbXRGv/JpLaOgSIXj7x+vSc2pMAwrpcwnAaNCw=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
