--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "3x1io/filament-sitemap": "^1.0",
+        "3x1io/filament-themes": "^1.0",
         "bezhansalleh/filament-shield": "^1.1",
         "doctrine/dbal": "^3.3",
         "fabpot/goutte": "^4.0",
@@ -22,7 +24,8 @@
         "laravel/tinker": "^2.7",
         "laravel/ui": "^3.4",
         "livewire/livewire": "^2.5",
-        "spatie/laravel-medialibrary": "^10.3"
+        "spatie/laravel-medialibrary": "^10.3",
+        "spatie/laravel-sitemap": "^6.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
@@ -38,7 +41,8 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "Themes\\": "resources/views/themes/"
         }
     },
     "autoload-dev": {
