--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,6 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
-        "3x1io/filament-sitemap": "^1.0",
-        "3x1io/filament-themes": "^1.0",
         "bezhansalleh/filament-shield": "^1.1",
         "doctrine/dbal": "^3.3",
         "fabpot/goutte": "^4.0",
@@ -24,8 +22,7 @@
         "laravel/tinker": "^2.7",
         "laravel/ui": "^3.4",
         "livewire/livewire": "^2.5",
-        "spatie/laravel-medialibrary": "^10.3",
-        "spatie/laravel-sitemap": "^6.1"
+        "spatie/laravel-medialibrary": "^10.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
@@ -41,8 +38,7 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/",
-            "Themes\\": "resources/views/themes/"
+            "Database\\Seeders\\": "database/seeders/"
         }
     },
     "autoload-dev": {
