--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
         "laravel/tinker": "^2.7",
         "laravel/ui": "^3.4",
         "livewire/livewire": "^2.5",
-        "spatie/laravel-medialibrary": "^10.3"
+        "spatie/laravel-medialibrary": "^10.3",
+        "spatie/laravel-settings": "^2.4",
+        "spatie/laravel-sitemap": "^6.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
