--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "laravel/tinker": "^2.7",
         "laravel/ui": "^3.4",
         "livewire/livewire": "^2.5",
+        "realrashid/sweet-alert": "^5.0",
         "spatie/laravel-medialibrary": "^10.3",
         "spatie/laravel-settings": "^2.4",
         "spatie/laravel-sitemap": "^6.1"
