--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^3.4",
+        "laravolt/avatar": "^4.1",
         "livewire/livewire": "^2.5",
         "realrashid/sweet-alert": "^5.0",
         "spatie/laravel-medialibrary": "^10.3",
