--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "realrashid/sweet-alert": "^5.0",
         "spatie/laravel-medialibrary": "^10.3",
         "spatie/laravel-settings": "^2.4",
-        "spatie/laravel-sitemap": "^6.1"
+        "spatie/laravel-sitemap": "^6.1",
+        "yajra/laravel-datatables-oracle": "^9.19"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
