--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "livewire/livewire": "^2.5",
         "mallardduck/blade-boxicons": "^2.2",
         "realrashid/sweet-alert": "^5.0",
+        "spatie/laravel-honeypot": "^4.2",
         "spatie/laravel-medialibrary": "^10.3",
         "spatie/laravel-settings": "^2.4",
         "spatie/laravel-sitemap": "^6.1",
